src/terraform/modules/services/caching/redis/templates/redis-commander/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis-commander
  name: redis-commander
  namespace: ${namespace}
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
      app: redis-commander
  type: ClusterIP
